force-app/main/default/objects/ServiceTerritory/fields/Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code__c</fullName>
    <externalId>true</externalId>
    <label>Branch Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>