force-app/main/default/objects/ServiceTerritory/fields/Pronto_Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Pronto_Territory_Code__c</fullName>
    <externalId>true</externalId>
    <label>Pronto Territory Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>