force-app/main/default/objects/ServiceTerritory/listViews/All_ServiceTerritories.listView-meta.xml
<ListView>
    <fullName>All_ServiceTerritories</fullName>
    <columns>Name</columns>
    <columns>Pronto_Territory_Code__c</columns>
    <columns>Branch_Code__c</columns>
    <columns>IsActive</columns>
    <columns>OperatingHours</columns>
    <columns>ParentTerritory</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LastModifiedBy</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Territories</label>
</ListView>